--- a/zh_cn.lang
+++ b/zh_cn.lang
@@ -472,79 +472,79 @@ gui.xaero_entity_category_other_teams=来自不同的队伍
 gui.xaero_entity_category_items=物品
 gui.xaero_entity_category_other_entities=其他
 gui.xaero_category_settings=设置
-gui.xaero_category_include_list=包含的列表
-gui.xaero_box_category_include_list2=A list of entity types to include in the (sub-)category on top of the entities included by the "Hard Include".
-gui.xaero_category_exclude_list=排除的列表
-gui.xaero_box_category_exclude_list2=A list of entity types to exclude from the entity types already included in the (sub-)category. Can work both as a "whitelist" and a "blacklist" depending on the exclusion mode you choose. This does not remove entities from the entity radar, unless you're excluding from the root "Any" category. The "Display" setting can remove entities from the radar.
-gui.xaero_category_add_subcategory=Add Sub-Category
-gui.xaero_category_hard_include=Hard Include
-gui.xaero_box_category_hard_include2=Controls which entities to automatically include in the (sub-)category without having to put them in the include list manually.
-gui.xaero_category_list_add=Add To List...
-gui.xaero_category_exclude_list_mode=Exclusion Mode
-gui.xaero_category_name=Category Name...
-gui.xaero_category_confirm=Confirm
-gui.xaero_category_delete=Delete Category
-gui.xaero_category_delete_confirm=Delete the following category?
-gui.xaero_category_enable_protection=Protection: OFF
-gui.xaero_category_disable_protection=Protection: ON
-gui.xaero_category_disable_protection_confirm=Disable protection for the following category?
-gui.xaero_category_enable_protection_confirm=Enable protection for the following category?
-gui.xaero_box_category_protection=Category protection prevents you from (accidentally) deleting, moving, renaming a category or changing its "Hard Include" setting.
-gui.xaero_category_protected_category=Protected!
-gui.xaero_category_category_move_up=Increase Priority
-gui.xaero_category_category_move_down=Decrease Priority
-gui.xaero_category_delete_list_element=Delete
-gui.xaero_category_settings_confirm=Confirm
-gui.xaero_category_settings_cancel=Cancel
-gui.xaero_category_settings_cancel_confirm=Leave without saving your changes?
-gui.xaero_category_settings_reset=Reset Defaults
-gui.xaero_category_settings_reset_confirm1=Reset the category configuration to default values?
-gui.xaero_category_settings_reset_confirm2=Custom categories will be removed and the default ones will be reset.
-gui.xaero_radar_displayed=Display
-gui.xaero_radar_dots_color=Dot Color
-gui.xaero_radar_icons_displayed=Icons
-gui.xaero_radar_names_displayed=Names
-gui.xaero_radar_render_order=Render Order
-gui.xaero_box_radar_render_order=Controls the order in which the radar categories are rendered. A lower number means being rendered earlier. However, in the newer Minecraft versions dots are always rendered on top of the icons. The order still applies within dot or icon rendering though.
-gui.xaero_radar_dots_color_team_colour=Team Color
-gui.xaero_box_always_entity_nametags2=Always render names for entities with name tags regardless of what the name setting is set to.
-gui.xaero_radar_setting_displayed=Display Radar
-gui.xaero_radar_setting_names=Display Names
-gui.xaero_radar_setting_icons=Display Icons
-gui.xaero_toggle_entity_radar=Toggle Entity Radar
-narration.xaero_ui_list_left_right_usage=Press LEFT and RIGHT buttons to select a column within the entry.
-gui.xaero_category_help2=Select a sub-category and go to its Settings to configure things like dot color, names, icons etc. \n \n Sub-categories that are higher on the list are prioritized when multiple sub-categories include the same entity! Keep that in mind when creating custom categories. Usually, a new custom category should be placed at the top.
-gui.xaero_update_notification=Update Notifications
-gui.xaero_category_cut=Cut/Move §e%1$s
-gui.xaero_category_paste=Paste §e%1$s§r Into §e%2$s
-gui.xaero_category_paste_cancel=Cancel Cut/Paste
-gui.xaero_category_duplicate=Duplicate §e%1$s
-gui.xaero_category_duplicate_confirm=Duplicate the following category?
-gui.xaero_reverse_entity_radar=Reverse Radar Render Order
-gui.xaero_adjust_height_for_carpetlike_blocks=Adjust Y For Short Blocks
-gui.xaero_box_adjust_height_for_carpetlike_blocks=Subtract 1 from the height value for short carpetlike blocks, e.g. carpet, 1-layer snow, lilypad etc. This prevents such blocks from causing harsh shading on the map like a full block.
-gui.xaero_box_category=View/Edit §e%1$s
-gui.xaero_box_category_settings=Settings For §e%1$s
-gui.xaero_auto_convert_wp_distance_km=Convert Distance to KM at
-gui.xaero_auto_convert_wp_distance_km_never=Never
-gui.xaero_waypoint_distance_precision=Waypoint Distance Precision
-gui.xaero_sort_angle=Angular Distance
-gui.xaero_toggle_enabled=Enabled
-gui.xaero_toggle_disabled=Disabled
-gui.xaero_main_entity_dot_size=Main Entity Dot Size
-gui.xaero_category_settings_save_confirm=Save changes before you exit?
-gui.xaero_category_settings_save_confirm_warning=Warning: This confirmation screen was recently replaced!
-gui.xaero_start_fading_at=Min Y Distance For Depth Fade
-gui.xaero_box_start_fading_at=Minimum Y level difference requirement for an entity to start darkening on the radar when the "Show Entity Depth" setting is enabled.
-gui.xaero_start_fading_at_auto=Auto
-gui.xaero_legacy_color=Legacy
-gui.xaero_partial_y_teleportation=Use Y With Partial When TP
-gui.xaero_box_partial_y_teleportation=When teleporting to a waypoint or a map location, offset the Y coordinate by 0.5 to avoid falling through carpet-like blocks into the void. Otherwise, the integer Y coordinate is used.
-gui.xaero_delete_reached_deathpoints=Delete Reached Deathpoints
-gui.xaero_box_delete_reached_deathpoints=Automatically delete deathpoints when you are within 4 blocks from them. This requires the deathpoint to be visible in-game or on the minimap. A deathpoint is protected from deletion for 5 seconds after its creation.
-gui.xaero_hide_minimap_under_screen=Hide When Under Screen
-gui.xaero_box_hide_minimap_under_screen=Hide the minimap when a GUI screen is open, e.g. the inventory, with the exception of minimap-related screens and the chat screen.
-gui.xaero_north_compass_color=North Compass Color
-gui.xaero_north_compass_color_default=Default
-gui.xaero_category_add_to_list_custom=Confirm Custom Input: %1$s
-gui.xaero_box_category_list_add=Supports entity identifiers or patterns with special characters * ) ( and |. \n \n * - matches anything. \n )( - parenthesis, mostly for usage with |. \n | - the OR operator to match different sequences in the same location. \n \n For example: \n minecraft:creeper \n minecraft:zombie(_villager|_horse) - zombie villagers and horses. \n minecraft:a*l - any vanilla entity which starts with 'a' and ends with 'l'.
+gui.xaero_category_include_list=包含列表
+gui.xaero_box_category_include_list2=“硬包含”中包括的实体顶部的类别或子类别包含的实体类型、
+gui.xaero_category_exclude_list=排除列表
+gui.xaero_box_category_exclude_list2=已经包含在子类中的实体类型中的需要排除的实体类型的列表。可以同时作为“白名单”和“黑名单”，取决于您选择的排除模式。这不会从实体雷达中移除实体，除非您从根类别“任何”中移除。“显示”设置可以将实体从雷达中移除。
+gui.xaero_category_add_subcategory=添加子类别
+gui.xaero_category_hard_include=硬包含
+gui.xaero_box_category_hard_include2=控制哪些实体自动包含在类别或子类别中，无需手动将其加入列表。
+gui.xaero_category_list_add=加入列表……
+gui.xaero_category_exclude_list_mode=排除模式……
+gui.xaero_category_name=类别名称……
+gui.xaero_category_confirm=确认
+gui.xaero_category_delete=删除类别
+gui.xaero_category_delete_confirm=删除以下类别？
+gui.xaero_category_enable_protection=保护：关
+gui.xaero_category_disable_protection=保护：开
+gui.xaero_category_disable_protection_confirm=禁用以下类别的保护？
+gui.xaero_category_enable_protection_confirm=启用以下类别的保护？
+gui.xaero_box_category_protection=类别保护可以让你避免意外删除、移动、更名一个类别或改变该类别的“硬包含”设置。
+gui.xaero_category_protected_category=已保护
+gui.xaero_category_category_move_up=提高优先级
+gui.xaero_category_category_move_down=降低优先级
+gui.xaero_category_delete_list_element=删除
+gui.xaero_category_settings_confirm=确认
+gui.xaero_category_settings_cancel=取消
+gui.xaero_category_settings_cancel_confirm=放弃更改并直接离开？
+gui.xaero_category_settings_reset=重置为默认
+gui.xaero_category_settings_reset_confirm1=重置为默认的类别配置？
+gui.xaero_category_settings_reset_confirm2=自定义的实体类别会被移除，默认的实体类别会被重置。
+gui.xaero_radar_displayed=显示
+gui.xaero_radar_dots_color=点颜色
+gui.xaero_radar_icons_displayed=图标
+gui.xaero_radar_names_displayed=名称
+gui.xaero_radar_render_order=渲染次序
+gui.xaero_box_radar_render_order=配置雷达类别渲染的次序。数字越低越早渲染。但是，在新版的Minecraft中，点始终渲染在图标上方，但此顺序仍可应用于点或图标的渲染。
+gui.xaero_radar_dots_color_team_colour=队伍颜色
+gui.xaero_box_always_entity_nametags2=总是为相同标签的实体显示名称，无论名称设置为什么。
+gui.xaero_radar_setting_displayed=显示雷达
+gui.xaero_radar_setting_names=显示名称
+gui.xaero_radar_setting_icons=显示图标
+gui.xaero_toggle_entity_radar=实体雷达开关
+narration.xaero_ui_list_left_right_usage=按左键和邮件选择该项内的一个列
+gui.xaero_category_help2=选择一个子类别，并前往其设置以配置点颜色、名称、图标等设置。\n \n 多个子类别包含同一实体时，优先选择列表中更高的类别（创建自定义类别是要记住）。通常，新的自定义类别应该放在最上面。
+gui.xaero_update_notification=更新通知
+gui.xaero_category_cut=剪切/移动 §e%1$s
+gui.xaero_category_paste=将 §e%1$s§r 粘贴到 §e%2$s
+gui.xaero_category_paste_cancel=取消剪切/粘贴
+gui.xaero_category_duplicate=重复 §e%1$s
+gui.xaero_category_duplicate_confirm=重复以下类别？
+gui.xaero_reverse_entity_radar=倒置雷达渲染顺序
+gui.xaero_adjust_height_for_carpetlike_blocks=调整矮方块的Y
+gui.xaero_box_adjust_height_for_carpetlike_blocks=对于地毯型方块（例如地毯、单层雪、睡莲）的高度值减1。这可以避免这些方块像完整方块那样在地图上显示明显的阴影。
+gui.xaero_box_category=查看/编辑 §e%1$s
+gui.xaero_box_category_settings=§e%1$s§r 的设置
+gui.xaero_auto_convert_wp_distance_km=将距离转化为KM
+gui.xaero_auto_convert_wp_distance_km_never=从不
+gui.xaero_waypoint_distance_precision=路径点距离精度
+gui.xaero_sort_angle=角度距离
+gui.xaero_toggle_enabled=启用
+gui.xaero_toggle_disabled=禁用
+gui.xaero_main_entity_dot_size=主要实体点大小
+gui.xaero_category_settings_save_confirm=退出前保存更改？
+gui.xaero_category_settings_save_confirm_warning=警告：此配置屏幕近期被替换！
+gui.xaero_start_fading_at=深度衰减的最小Y距离
+gui.xaero_box_start_fading_at=“显示实体深度”设置启用时，实体开始在雷达上变暗的最小Y轴坐标差。
+gui.xaero_start_fading_at_auto=自动
+gui.xaero_legacy_color=旧版
+gui.xaero_partial_y_teleportation=tp时，使用y的相对距离
+gui.xaero_box_partial_y_teleportation=传送至一个路径点或者地图位置时，将Y坐标向上偏移0.5，以避免从地毯类方块跌落至虚空。否则，直接使用整数的Y坐标。
+gui.xaero_delete_reached_deathpoints=删除已到达的死亡点
+gui.xaero_box_delete_reached_deathpoints=距离死亡点4个方块以内时自动删除该死亡点。这需要死亡点在游戏内或小地图上可见。死亡点在创建后的5秒内会被保护以防删除。
+gui.xaero_hide_minimap_under_screen=在屏幕下隐藏
+gui.xaero_box_hide_minimap_under_screen=启用了GUI屏幕（例如物品栏）时隐藏小地图，除了与小地图有关的屏幕以及聊天屏幕。
+gui.xaero_north_compass_color=北罗盘颜色
+gui.xaero_north_compass_color_default=默认
+gui.xaero_category_add_to_list_custom=确认自定义输入：%1$s
+gui.xaero_box_category_list_add=支持带有特殊字符 * ) ( 和 | 的实体标识符或匹配模式。\n \n * - 匹配所有。 \n )( - 括号，主要用于 |. \n | - “或”运算符，以匹配相同位置的不同序列。 \n \n 例如，\n minecraft:creeper \n minecraft:zombie(_villager|_horse) - 僵尸村民和僵尸马。 \n minecraft:a*l - 任何以'a'开头、'l'结尾的原版实体。
